# spdr-vm

./: Cargo.toml  README.md  rustfmt.toml  update-isa-dep.ps1
src/: allocator.rs  errors.rs  lib.rs  macros.rs  memory.rs  opcodes.rs  vm.rs
