[package]
name = "spdr-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
eyre = "0.6.12"
num-traits = "0.2"
num-derive = "0.3"
spdr-isa = {git = "https://github.com/Barca545/spdr-isa.git", rev = "497d155f5242ceec2b522645a96f997aac32c840"}




